# hypogen-db

./: README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request---.md
.github/workflows/: deep-build.yml  deep-publish.yml  deep-test.yml
docs/: conf.py  example.rst  index.rst
example_environment/: __main__.py
example_environment/example_module/: example_script.py
hypogen_db/connection/: connection.py  initialize_db.py  settings.py
tests/: conftest.py  test_example_environment.py
