[tool.poetry]
name = "HypogenDB"
version = "0.1.0"
license = "Apache-2.0"
description = "A library for direct interfacing with the hypogen database instance."
authors = ["Ashia Livaudais <pantagruelspendulum@protonmail.com>", "Michael House <mjhouse@protonmail.com>"]
homepage = "url/to/the/webpage"
repository = "https://github.com/deepskies/hypogen-db"
documentation = "url/to/the/documentation"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^6.2"
sphinx = "^7.0.1"
sphinx-autodoc-typehints = "^1.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
